test/2nd.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-agents
  namespace: kube-system # Cilium agents run here
spec:
  endpointSelector:
    matchLabels:
      k8s-app: cilium
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
