test/basic_networkpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-lb-ingress
  namespace: default # Or the namespace where your service/ingress are
spec:
  endpointSelector: {} # Apply to all endpoints (nodes in this case for external IP)
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
