test/open.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - all
